# pyqt-tutorials

./: .gitignore  MainWindow.py  app.py  data.db  employee.ui  employee_dlg.py  pyproject.toml  todo.ui
